add bid operation check and response in main flow